# lite-client

./: .gitignore  Cargo.toml  README.md  config.json  gen.py
.github/workflows/: ci.yml  sync.yml
adnl/: Cargo.toml
adnl/examples/: time.rs
adnl/src/: client.rs  client_builder.rs  handshake.rs  helper_types.rs  io.rs  lib.rs  receive.rs  send.rs  tests.rs
adnl/src/primitives/: receive.rs
adnl/src/wrappers/: builder.rs  client.rs
cli/: Cargo.toml
cli/src/: arg_parsers.rs  main.rs
docs/: lite.tl
liteapi/: Cargo.toml
liteapi/examples/: client.rs  server.rs  time.rs
liteapi/src/: client.rs  encoding.rs  lib.rs  peer.rs  protocol.rs  server.rs  tl_types.rs  types.rs
liteapi/src/layers/: mod.rs
liteapi/src/tl/: adnl.rs  common.rs  mod.rs  request.rs  response.rs  tests.rs  utils.rs
liteapi/tests/: config_test.rs  sample.txt
network-config/: Cargo.toml
network-config/src/: lib.rs
src/: adnl.rs  config.rs  lib.rs  main.rs  scheme.rs  tests.rs  tl_types.rs
tests/: config_test.rs  rpc_test.rs
