[package]
name = "liteclient"
version = "0.1.0"
authors = ["Vladimir Lebedev <d3fl4t3@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { features = ['rt-multi-thread'], version = '1.5.0' }
ton_api = { git = 'https://github.com/tonlabs/ton-labs-tl', package = 'ton_api', tag = '0.2.120' }
base64 = '0.13.0'
pretty-hex = '0.2.1'
env_logger = '0.9.0'
log = '0.4.14'
clap = { version = "3.1.6", features = ["derive"] }
chrono = "0.4.19"
adnl = { path = "adnl", features = ["std"] }
x25519-dalek = "2.0.0-pre.1"
rand = "0.7"
ton_types = { git = 'https://github.com/tonlabs/ton-labs-types', tag = '1.10.12' }
hex = "0.4.3"