[package]
name = "adnl"
version = "0.1.0"
authors = ["Vladimir Lebedev <d3fl4t3@gmail.com>"]
edition = "2021"

[dependencies]
sha2 = "0.10.2"
ctr = "0.9.1"
aes = "0.8.1"
log = "0.4.14"
ciborium-io = "0.2.0"
rand_core = "0.6.3"
x25519-dalek = { version = "2.0.0-pre.1", optional = true }

[dev-dependencies]
hex = "0.4.3"
ciborium-io = { version = "0.2.0", features = ["alloc"] }

[features]
default = []
dalek = ["x25519-dalek"]
alloc = ["ciborium-io/alloc"]
std = ["ciborium-io/std"]