[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
pretty-hex = '0.2.1'
env_logger = '0.9.0'
log = '0.4.14'
clap = { version = "3.2.25", features = ["derive"] }
chrono = "0.4.19"
hex = "0.4.3"
ureq = "2.4.0"
regex = "1"
ton_liteapi = { path = "../liteapi" }
ton_networkconfig = { path = "../network-config" }
rand = "0.8.5"
tokio = { version = "1.36", features = ["full"] }