[package]
name = "ton_lc"
version = "0.1.0"
edition = "2021"
description = "Low-level implementation of TON lite client"
repository = "https://github.com/tonstack/lite-client"
keywords = ["ton"]
categories = ["network-programming"]
license = "MIT"
authors = ["Vladimir Lebedev <d3fl4t3@gmail.com>"]

[dependencies]
base64 = "0.13.0"
pretty-hex = '0.2.1'
env_logger = '0.9.0'
log = '0.4.14'
clap = { version = "3.2.25", features = ["derive"] }
chrono = "0.4.19"
hex = "0.4.3"
ureq = "2.4.0"
regex = "1"
ton_liteapi = "0.1.0"
ton_networkconfig = "0.1.0"
rand = "0.8.5"
tokio = { version = "1.36", features = ["full"] }