[package]
name = "ton_liteapi"
version = "0.1.0"
edition = "2021"

[dependencies]
adnl = { git = "https://github.com/tonstack/adnl-rs", branch = "server" }
tl-proto = "0.4.2"
derivative = "2.2.0"
log = '0.4.14'
hex = "0.4.3"
thiserror = "1"
tokio = { version = "1.36", features = ["net", "io-util"] }
tower-service = "0.3.2"