[package]
name = "ton_liteapi"
version = "0.1.0"
edition = "2021"

[dependencies]
adnl = { git = "https://github.com/tonstack/adnl-rs", branch = "server" }
tl-proto = { version = "0.4.5", features = ["bytes"] }
derivative = "2.2.0"
log = '0.4.14'
hex = "0.4.3"
thiserror = "1"
tokio = { version = "1.36", features = ["net", "io-util"] }
tower = { version = "0.4.13", features = ["make", "util"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio-tower = "0.6.0"
rand = "0.8.5"
futures = "0.3"
pin-project = "1"

[dev-dependencies]
ureq = "2.4.0"
base64 = "0.13.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
tokio = { version = "1.36", features = ["full"] }